# Validador_CPF

./: README.md  pyproject.toml  test_validador_cpf.py  validador_cpf.py
