[tool.poetry]
name = "validador-cpf"
version = "0.1.0"
description = "Atividade - TDD com pytest"
authors = ["jhonathasmoura <jhonathasmoura6@gmail.com>"]
readme = "README.md"
packages = [{include = "validador_cpf"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
